# rustmq

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile.admin  Dockerfile.bigquery-subscriber  Dockerfile.broker  Dockerfile.controller  GEMINI.md  Makefile  README.md  build.rs  codereview.md  docker-compose.yml  gcs-test.yaml.template  generate-certs.sh  run-benchmarks.sh  start-broker-dev.sh  start-cluster-dev.sh  start-controller-dev.sh  zipora.md
.cargo/: audit.toml  config.toml
.github/workflows/: release.yml  rust.yml
benches/: README.md  SECURITY_BENCHMARKS.md  authorization_benchmarks.rs  branchless_parsing_bench.rs  buffer_pool_bench.rs  cache_performance_bench.rs  certificate_validation_bench.rs  connection_pool_bench.rs  futures_unordered_bench.rs  generate_performance_report.py  grpc_protobuf_benchmarks.rs  header_performance_bench.rs  quick_header_bench.rs  replication_manager_benchmarks.rs  run_security_benchmarks.sh  security_baseline.toml  security_performance.rs  simple_branchless_bench.rs  simple_security_benchmarks.rs  standalone_security_bench.rs  wal_performance_bench.rs  working_security_bench.rs  zero_copy_benchmark.rs
benches/utils/: data_generators.rs  mod.rs  performance_helpers.rs
config/: admin-dev.toml  admin-rate-limiting-example.toml  admin-server.toml  bigquery-subscriber.toml  broker-dev.toml  broker.toml  controller-dev.toml  controller-simple.toml  controller.toml  example-development.toml  example-production.toml  test-broker.toml  test-controller.toml
docker/: .env.example  Dockerfile.admin  Dockerfile.admin-server  Dockerfile.bigquery-subscriber  Dockerfile.broker  Dockerfile.controller  Dockerfile.webui  README.md  benchmark-builds.sh  build-and-push.sh  build-multiplatform.sh  docker-compose.yml  nginx-webui.conf  quick-deploy.sh  validate-deployment.sh  webui-entrypoint.sh
docs/: ENCRYPTION_CONFIGURATION.md  PERFORMANCE_OPTIMIZATION_SUMMARY.md  README.md  admin-api.md  admin_cli_security.md  broker-health-monitoring.md  client-sdks.md  configuration-guide.md  configuration-reference.md  development.md  getting-started.md  gke-deployment-guide.md  high-watermark-optimization.md  io-uring-optimization.md  kubernetes-deployment.md  protobuf-architecture.md  rate-limiting-configuration.md  testing-infrastructure.md  wasm-etl-deployment-guide.md  wasm-etl.md
docs/ai-design/: AstraStream.md  RustMQ_Architecture_Design.md  auth-design.md  auth-performance-analysis.md  auth-performance-implementation.md  automq2rustmq.md  claude-final-design.md  gemini-design.md  gemini-final-design.md  wasm-codereview.md  wasm-etl-design.md
docs/deployment/: gke.md  procedure.md
docs/operations/: backup-restore.md  monitoring.md
docs/security/: ACL_MANAGEMENT.md  ADMIN_API_SECURITY.md  CACHE_ARCHITECTURE.md  CERTIFICATE_MANAGEMENT.md  CERTIFICATE_SIGNING_IMPLEMENTATION.md  CLI_SECURITY_GUIDE.md  KUBERNETES_SECURITY.md  PRODUCTION_SECURITY.md  SECURITY_ARCHITECTURE.md  SECURITY_BENCHMARKS.md  SECURITY_BEST_PRACTICES.md  SECURITY_CONFIGURATION.md  SECURITY_PERFORMANCE.md  SECURITY_TUNING_GUIDE.md  TEST_INFRASTRUCTURE.md  TROUBLESHOOTING.md  WEBPKI_INTEGRATION.md  guide.md
docs/subscribers/: bigquery.md
examples/: admin_cli_security_demo.sh  rate_limiting_usage.rs  secure_consumer.rs  secure_producer.rs
examples/wasm-etl/: README.md  sample-pipeline.json  test-etl-pipeline.sh
examples/wasm-etl/message-processor/: Cargo.toml  build-and-deploy.sh
examples/wasm-etl/message-processor/src/: lib.rs
gke/: ENCRYPTION_SETUP.md  README.md  config-schema.json  create-cluster.sh  delete-cluster.sh  deploy-rustmq-gke.sh  deploy.sh  drift-detect.sh  validate-config.sh
gke/base/: backend-config.yaml  broker-daemonset.yaml  configmap-broker.yaml  configmap-controller.yaml  controller-statefulset.yaml  hpa.yaml  ingress.yaml  kustomization.yaml  monitoring.yaml  namespace.yaml  secret-key-encryption.yaml  services.yaml  storage.yaml
gke/environments/: README.md  common.env  dev.env  prod.env  staging.env
gke/network/: README.md  ingress.yaml
scripts/: generate-certs.sh  miri-test.sh  scan-images.sh  setup-development.sh  setup-production.sh  validate-env.sh
sdk/go/: .gitignore  (+5 more)
sdk/rust/: CONSUMER_ENHANCEMENTS.md  Cargo.toml  README.md
sdk/rust/benches/: client_benchmarks.rs
sdk/rust/docs/: security.md
sdk/rust/examples/: admin_api_example.rs  advanced_consumer.rs  enhanced_consumer.rs  multi_partition_consumer.rs  production_consumer.rs  secure_consumer.rs  secure_producer.rs  simple_consumer.rs  simple_producer.rs  stream_processor.rs  token_authentication.rs
sdk/rust/src/: admin.rs  client.rs  config.rs  connection.rs  consumer.rs  error.rs  lib.rs  message.rs  producer.rs  security.rs  stream.rs  types.rs
sdk/rust/src/connection/: tests.rs
sdk/rust/src/producer/: tests.rs
sdk/rust/tests/: connection_tests.rs  consumer_tests.rs  integration_producer.rs  integration_tests.rs  multi_partition_integration_tests.rs  security_tests.rs  stream_tests.rs
sdk/rust/tests/miri/: client_tests.rs  mod.rs
src/: broker.rs  config.rs  error.rs  lib.rs  metrics.rs  panic_handler.rs  proto_convert.rs  types.rs
tests/: acl_admin_api_tests.rs  futures_unordered_replication_test.rs  grpc_broker_replication_test.rs  grpc_controller_raft_test.rs  grpc_controller_raft_test.rs.disabled  grpc_integration_test.rs  grpc_integration_test.rs.disabled  grpc_proto_conversion_simple_test.rs  grpc_proto_conversion_test.rs.disabled  grpc_test_utils.rs  integration_broker_core.rs  integration_broker_discovery.rs  integration_broker_gcs_e2e.rs  integration_controller.rs  integration_end_to_end.rs  integration_etl.rs  integration_gcs.rs  integration_gcs_full.rs  integration_graceful_shutdown.rs  integration_load_test.rs  integration_raft_cluster.rs  integration_raft_extended.rs  integration_raft_partitions_test.rs  integration_raft_snapshot_replication_test.rs  integration_replication.rs  miri_basic_test.rs  wasm_integration_edge_cases.rs  wasm_integration_simple.rs  zero_copy_edge_cases.rs
web/: .gitignore  README.md  index.html  package.json  vite.config.ts
(+285 files in other folders)
