[package]
name = "rustmq"
version = "1.0.0"
edition = "2024"
rust-version = "1.88"
authors = ["bindiego"]
description = "Cloud-native distributed message queue system"
license = "Apache-2.0"
repository = "https://github.com/rustmq/rustmq"

[workspace]
members = [
    ".",
    "sdk/rust"
]

[dependencies]
# Async runtime
tokio = { version = "1.42", features = ["full"] }
tokio-uring = { version = "0.4", optional = true }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Networking
quinn = "0.10"
h3 = "0.0.3"
tonic = { version = "0.11", features = ["transport", "tls"] }
prost = "0.12"
prost-types = "0.12"
rustls = "0.21"
rustls-pemfile = "1.0"
rcgen = "0.11"

# Security and Authentication
x509-parser = "0.15"
webpki = "0.22"
ring = "0.17"
lru = "0.12"
regex = "1.11"
hex = "0.4"

# Bloom filter (updated to use bloomfilter instead of bloom)
bloomfilter = "1.0"
xxhash-rust = { version = "0.8", features = ["xxh3"] }

# Ultra-fast authorization dependencies
crossbeam = { version = "0.8", features = ["std"] }
ahash = "0.8"
bumpalo = "3.15"

# Storage
object_store = "0.8"
aws-sdk-s3 = "0.35"

# Google Cloud
gcp-bigquery-client = "0.22"
google-cloud-auth = "0.16"
google-cloud-googleapis = "0.12"

# gRPC additional features
tonic-health = "0.11"
tonic-reflection = "0.11"

# HTTP server for admin API
warp = "0.3"
clap = { version = "4.5", features = ["derive"] }
hyper = "0.14"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
bytes = "1.8"
uuid = { version = "1.11", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
dashmap = "5.5"
governor = "0.7"
parking_lot = "0.12"
async-trait = "0.1"

# Metrics
prometheus = "0.13"

# Configuration
config = "0.14"
toml = "0.8"

# WebAssembly
wasmer = { version = "4.2", optional = true }

# Compression
lz4_flex = "0.11"
zstd = "0.13"

# Checksums
crc32fast = "1.4"

# Time
chrono = { version = "0.4", features = ["serde"] }
time = { version = "0.3", features = ["serde", "macros"] }

# Cryptography
sha2 = "0.10"

[dev-dependencies]
criterion = "0.5"
tempfile = "3.15"
pretty_assertions = "1.4"
rand = "0.8"
fastrand = "2.0"
# gRPC testing support
tonic-mock = "0.4"
# Property-based testing
proptest = "1.5"

[features]
default = ["wasm"]
io-uring = ["tokio-uring"]
wasm = ["wasmer"]

[build-dependencies]
tonic-build = "0.11"

[[bin]]
name = "rustmq-broker"
path = "src/bin/broker.rs"

[[bin]]
name = "rustmq-controller"
path = "src/bin/controller.rs"

[[bin]]
name = "rustmq-admin"
path = "src/bin/rustmq-admin.rs"

[[bin]]
name = "rustmq-bigquery-subscriber"
path = "src/bin/bigquery_subscriber.rs"

[[bin]]
name = "rustmq-admin-server"
path = "src/bin/admin_server.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[[bench]]
name = "replication_manager_benchmarks"
harness = false

[[bench]]
name = "wal_performance_bench"
harness = false

[[bench]]
name = "security_performance"
harness = false

[[bench]]
name = "authorization_benchmarks"
harness = false

[[bench]]
name = "simple_security_benchmarks"
harness = false

[[bench]]
name = "standalone_security_bench"
harness = false
