[package]
name = "rustmq"
version = "1.0.0"
edition = "2024"
rust-version = "1.88"
authors = ["bindiego"]
description = "Cloud-native distributed message queue system"
license = "Apache-2.0"
repository = "https://github.com/rustmq/rustmq"

[workspace]
members = [
    ".",
    "sdk/rust"
]
exclude = [
    "tests/wasm_modules/*"
]

[dependencies]
# Async runtime
tokio = { version = "1.42", features = ["full"] }
tokio-uring = { version = "0.4", optional = true }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Networking
quinn = "0.10"
h3 = "0.0.3"
tonic = { version = "0.11", features = ["transport", "tls"] }
prost = "0.12"
prost-types = "0.12"
rustls = "0.21"
rustls-pemfile = "1.0"
pem = "3.0"
rcgen = "0.11"
reqwest = { version = "0.12", features = ["json"] }

# Security and Authentication
x509-parser = "0.15"  # Legacy parser, gradually being replaced
webpki = { version = "0.22", features = ["alloc"] }
webpki-roots = "0.25"  # For standard CA roots if needed
ring = "0.17"
x509-cert = "0.2"    # Modern ASN.1 certificate parsing
der = "0.7"          # ASN.1 DER encoding/decoding
spki = "0.7"         # Subject Public Key Info parsing
lru = "0.12"
regex = "1.11"
hex = "0.4"
glob = "0.3"
base64 = "0.21"
subtle = "2.5"

# Bloom filter (updated to use bloomfilter instead of bloom)
bloomfilter = "1.0"
xxhash-rust = { version = "0.8", features = ["xxh3"] }

# Ultra-fast authorization dependencies
crossbeam = { version = "0.8", features = ["std"] }
ahash = "0.8"
bumpalo = "3.15"

# Certificate validation optimizations
arrayvec = "0.7"
arc-swap = "1.7"
once_cell = "1.19"
thread_local = "1.1"
smallstr = "0.3"

# Memory optimization - SmallVec for header collections
smallvec = { version = "1.13", features = ["serde", "union", "const_generics"] }

# Storage
object_store = "0.8"
aws-sdk-s3 = "0.35"

# Google Cloud
gcp-bigquery-client = "0.22"
google-cloud-auth = "0.16"
google-cloud-googleapis = "0.12"

# gRPC additional features
tonic-health = "0.11"
tonic-reflection = "0.11"

# HTTP server for admin API
warp = "0.3"
clap = { version = "4.5", features = ["derive"] }
hyper = "0.14"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
bytes = "1.8"
uuid = { version = "1.11", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
dashmap = "5.5"
governor = "0.7"
parking_lot = "0.12"
async-trait = "0.1"

# Metrics
prometheus = "0.13"

# Configuration
config = "0.14"
toml = "0.8"

# WebAssembly - wasmtime for production ETL
wasmtime = { version = "25.0", optional = true }
wasmtime-wasi = { version = "25.0", optional = true }
# Legacy wasmer support (deprecated, use wasmtime)
wasmer = { version = "4.2", optional = true }

# Compression
lz4_flex = "0.11"
zstd = "0.13"

# Checksums
crc32fast = "1.4"

# High-performance caching
moka = { version = "0.12", features = ["future"], optional = true }

# Time
chrono = { version = "0.4", features = ["serde"] }
time = { version = "0.3", features = ["serde", "macros"] }

# Raft Consensus
openraft = { version = "0.9.21", features = ["serde", "storage-v2"] }

# Performance optimization
num_cpus = "1.16"
sysinfo = "0.30"

# Cryptography
sha2 = "0.10"
aes-gcm = "0.10"
pbkdf2 = "0.12"
rand = "0.8"

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }
tempfile = "3.15"
pretty_assertions = "1.4"
rand = "0.8"
fastrand = "2.0"
# gRPC testing support
tonic-mock = "0.4"
# Property-based testing
proptest = "1.5"
# Testing utilities
tracing-test = "0.2"
# RustMQ SDK for integration tests
rustmq-client = { path = "sdk/rust" }

[features]
default = ["wasm", "moka-cache"]
io-uring = ["tokio-uring"]
# wasmtime is the default WASM runtime for production ETL
wasm = ["wasmtime", "wasmtime-wasi"]
# Legacy wasmer support (deprecated)
wasm-wasmer = ["wasmer"]
moka-cache = ["moka"]
# Miri testing features
miri = []
miri-safe = []  # Subset of features safe for Miri testing

[build-dependencies]
tonic-build = "0.11"

[[bin]]
name = "rustmq-broker"
path = "src/bin/broker.rs"

[[bin]]
name = "rustmq-controller"
path = "src/bin/controller.rs"

[[bin]]
name = "rustmq-admin"
path = "src/bin/rustmq-admin.rs"

[[bin]]
name = "rustmq-bigquery-subscriber"
path = "src/bin/bigquery_subscriber.rs"

[[bin]]
name = "rustmq-admin-server"
path = "src/bin/admin_server.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.miri]
inherits = "dev"
opt-level = 0
debug = false
debug-assertions = true
overflow-checks = true

[[bench]]
name = "replication_manager_benchmarks"
harness = false

[[bench]]
name = "wal_performance_bench"
harness = false

[[bench]]
name = "security_performance"
harness = false

[[bench]]
name = "authorization_benchmarks"
harness = false

[[bench]]
name = "certificate_validation_bench"
harness = false

[[bench]]
name = "simple_security_benchmarks"
harness = false

[[bench]]
name = "standalone_security_bench"
harness = false

[[bench]]
name = "cache_performance_bench"
harness = false

[[bench]]
name = "working_security_bench"
harness = false

[[bench]]
name = "grpc_protobuf_benchmarks"
harness = false

[[bench]]
name = "connection_pool_bench"
harness = false

[[bench]]
name = "header_performance_bench"
harness = false

[[bench]]
name = "quick_header_bench"
harness = false
