[package]
name = "rustmq-client"
version = "1.0.0"
edition = "2024"
description = "RustMQ Client Library - High-performance message queue client"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rustmq/rustmq"
keywords = ["message-queue", "distributed-systems", "async", "streaming"]
categories = ["network-programming", "asynchronous"]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-util = "0.7"
quinn = "0.11"
rustls = "0.23"
rustls-native-certs = "0.7"
rustls-platform-verifier = "0.5"
rustls-pemfile = "2.0"
webpki-roots = "0.26"
x509-parser = "0.16"
ring = "0.17"
hex = "0.4"
rcgen = "0.13"
bytes = { version = "1.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.0", features = ["v4"] }
async-trait = "0.1"
futures = "0.3"
dashmap = "6.0"
parking_lot = "0.12"
lru = "0.12"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.0"
env_logger = "0.11"
chrono = { version = "0.4", features = ["serde"] }

[[bench]]
name = "client_benchmarks"
harness = false

[features]
default = []
compression = []
encryption = []
metrics = []
# Miri testing features
miri = []
miri-safe = []