[package]
name = "message-processor"
version = "0.1.0"
edition = "2021"
description = "Example WebAssembly ETL module for RustMQ"

[workspace]

[lib]
crate-type = ["cdylib"]

[dependencies]
# Core serialization - using efficient binary format
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
serde_json = "1.0"

# Efficient string operations
memchr = "2.7"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Optional: logging for development
log = "0.4"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
]

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
# Optimize for size and performance
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"